--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "ws": "^8.18.0"
   }
 }
